fix z-index

--- a/merge-tabbar-addressbar.css
+++ b/merge-tabbar-addressbar.css
@@ -71,7 +71,7 @@
         width: max(var(--address-bar-width), var(--address-bar-min-width));
         right: 0;
         margin-right: 0.5rem;
-        z-index: 3;
+        z-index: 5;
         transition: width 0.2s ease-in-out, height 0.2s ease-in-out, margin-top 0.2s ease-in-out, right 0.2s ease-in-out, box-shadow 0.2s ease-in-out !important;
 
         &:focus-within {
